fixed some more auth stuff

--- a/public/index.html
+++ b/public/index.html
@@ -745,7 +745,7 @@
 	</script>
 </div>
 <script type="text/javascript" src="scripts/firebaseui_setup.js"></script>
-<script type="text/javascript" src="scripts/auth.js"></script>
+<!--<script type="text/javascript" src="scripts/auth.js"></script>-->
 <script type="text/javascript" src="scripts/data.js"></script>
 <script type="text/javascript" src="scripts/community.js"></script>
 <script type="text/javascript" src="scripts/pantry.js"></script>
